@@ -32,6 +32,7 @@ Added support for multiple definition files
 Added Test0 to demonstrate support for quote
 Added Test1 to demonstrate support for list, cons, car, cdr, null? and cond
 Added test target to make
+Added support for raw strings
 
 ** Changed
 Makefile is modified to follow bin standard
